chore: optimize getModifierKey method, to handle more implementations of Key interface: (#16276)
* Make this code:
.contains(new HashableKey(KeyModifier.ALT))
	to work for more universal cases:
.stream().anyMatch(key -> key.matches(Key.ALT.toString()));

It should work now for HashableKeys and for other Key implementations as well.

* Format the code and make it work for older Java versions as well.

* As Key.Alt actually will be a collection of keys (key and additional keys), we need to look for the "Alt" itself.
(Key ALT = Key.of("Alt", "AltLeft")